# bot

./: main.py  pyproject.toml  requirements.txt
backup/: bot_backup.py  stonks_backup.py
bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
log/: bot_command_log.txt  bot_user_log.txt  hash_bot_command_log.txt  hash_bot_user_log.txt  log_example.txt
